--- a/02_rProgramming/Beschreibung.Rmd
+++ b/02_rProgramming/Beschreibung.Rmd
@@ -2,8 +2,8 @@
 title: "Coursera R Programming"
 author: "Kevin Ostheimer"
 date: "14.07.2014"
-output: pdf_document
-toc: true
+output: html_document
+toc: yes
 toc_depth: 2
 ---
 
