--- a/02_rProgramming/02_Beschreibung.Rmd
+++ b/02_rProgramming/02_Beschreibung.Rmd
@@ -2,7 +2,7 @@
 title: "Coursera R Programming"
 author: "Kevin Ostheimer"
 date: "14.07.2014"
-output: html_document
+output: pdf_document
 toc: yes
 toc_depth: 2
 ---
